    folders. Thanks Simon Matter for the patch. (#1155791)
  - Fix incorrect folder hierarchy display (#1009654), thanks
    Awais Ahmad for the patch (#1082558).
  - Added title box for From: column to display the address.
  - Make sure From: is really an object on replies, otherwise an error is
    generated trying to find reply citation (#1179754).

Version 1.4.4 - 21 January 2005
-------------------------------
  - Fix listcommands plugin to include src/ in compose links.
  - Fix listcommands plugin to behave like normal reply/compose
    links, and return to message page that originally called from.
  - Max upload file size now correctly handles a '-1' value, meaning
    unlimited (#1094569). 
  - Send 8-bit username or password as literals (#1081259).
  - configtest.php now checks whether default language is actually
    present.
  - Fix 'plus instead of space in downloaded file name' issue,
    which was introduced in 1.4.4-RC1 (#1076733).
  - Disabled unmaintained Thai translation.
  - Security: Added hook for Preferences Backend to resolve potential
    insecure file inclusions. [CAN-2005-0075]
  - Set up language before outputing errors in auth.php and signout.php
    to make them appear in the correct language.
  - Security: Fix potential file inclusion issues in src/webmail.php.
    [CAN-2005-0103]
  - Fixed minor bug in DMN plugin that caused it to not correctly set
    lastTargetMailbox.
  - Security: Fix possible XSS issues in src/webmail.php. [CAN-2005-0104]
  - Correct undefined variable usage in src/webmail.php.

Version 1.4.4 RC1 - 31 December 2004
------------------------------------
  - Get alternating row colors of addressbook in sync with mailbox list.
  - Fix bug in detecting the delimiter in a folder moved to trash.
  - Trailing spaces are no longer trimmed from folder names (#818974).
  - Give proper error when PEAR DB not found.
  - Remove inappropriate strip_tags() from add-to-addressbook (#968475).