@@ -310,6 +310,7 @@ Version 1.5.1 -- CVS
     (#764709).
   - If From: field is unset in an email, header object for from field is not
     correctly set, and generates an error on reply (#1179754).
+  - Add Cancel button to addressbook (#1180565).
   
 Version 1.5.0 - 2 February 2004
 -------------------------------
