@@ -77,6 +77,7 @@ Version 1.4.5 - CVS
   - Added title box for From: column to display the address.
   - Make sure From: is really an object on replies, otherwise an error is
     generated trying to find reply citation (#1179754).
+  - Add Cancel button to addressbook (#1180565).
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
